@startuml
title Factory Method Pattern - Account and Equipment Creation

skinparam classAttributeIconSize 0
skinparam shadowing false

abstract class User
class Student
class Faculty
class Researcher
class Guest
class HeadLabCoordinator
class LabManager

User <|-- Student
User <|-- Faculty
User <|-- Researcher
User <|-- Guest
User <|-- HeadLabCoordinator
User <|-- LabManager

class Equipment {
  - equipmentId: String
  - description: String
  - labLocation: String
  - status: String
}

class AccountFactory <<Factory>> {
  + createUser(role, email, passwordHash, idOrCertNumber): User
}

class EquipmentFactory <<Factory>> {
  + createEquipment(equipmentId, description, labLocation): Equipment
}

class ReservationSystem

AccountFactory ..> User : creates
EquipmentFactory ..> Equipment : creates
ReservationSystem ..> AccountFactory : uses
ReservationSystem ..> EquipmentFactory : uses
@enduml
